# atlas

./: .clang-format  CMakeLists.txt
atlas/: CMakeLists.txt
atlas/atlas-core/: CMakeLists.txt
atlas/atlas-core/include/: atlas-core
atlas/atlas-core/src/: test.cpp  test.h
atlas/atlas-sample/: CMakeLists.txt
atlas/atlas-sample/src/: main.cpp
atlas/atlas-tests/: CMakeLists.txt
cmake/: googletest.cmake  sdl.cmake
